[gd_scene load_steps=12 format=2]

[ext_resource path="res://resource/bj2.png" type="Texture" id=1]
[ext_resource path="res://fun/action_sub.tscn" type="PackedScene" id=2]
[ext_resource path="res://fun/action.gd" type="Script" id=3]
[ext_resource path="res://fun/blood_sub.tscn" type="PackedScene" id=4]
[ext_resource path="res://font.tres" type="DynamicFont" id=5]
[ext_resource path="res://resource/anim_attack/attack_anim_A_to_B.tres" type="Animation" id=6]
[ext_resource path="res://resource/anim_attack/attacl_anim_B_to_A.tres" type="Animation" id=7]
[ext_resource path="res://Font/li.ttf" type="DynamicFontData" id=8]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 1 )
region_rect = Rect2( 0, 0, 512, 512 )

[sub_resource type="DynamicFont" id=3]
outline_size = 3
outline_color = Color( 0.180392, 0.180392, 0.180392, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 8 )

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Panel/Panel:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 208, 200 ) ]
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Panel/Panel2:rect_position:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 688, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("Panel/Panel2:rect_position:y")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 200, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/3/type = "value"
tracks/3/path = NodePath("Panel/Panel2:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 688, 200 ) ]
}

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )

[node name="Panel" parent="Panel" instance=ExtResource( 2 )]
margin_left = 208.0
margin_top = 200.0
margin_right = 352.0
margin_bottom = 352.0

[node name="blood_main" parent="Panel/Panel" instance=ExtResource( 4 )]
margin_left = -56.0
margin_top = -64.0
margin_right = -200.0
margin_bottom = -216.0

[node name="Panel2" parent="Panel" instance=ExtResource( 2 )]
margin_left = 688.0
margin_top = 200.0
margin_right = 832.0
margin_bottom = 352.0

[node name="blood_main" parent="Panel/Panel2" instance=ExtResource( 4 )]
margin_left = -56.0
margin_top = -64.0
margin_right = -200.0
margin_bottom = -216.0

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="Button" type="Button" parent="."]
margin_top = 400.0
margin_right = 44.0
margin_bottom = 423.0
custom_fonts/font = ExtResource( 5 )
text = "隐藏"

[node name="n_control" type="Control" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -176.0

[node name="Panel" type="Panel" parent="n_control"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ItemList" type="ItemList" parent="n_control/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_speed = 1.5
anims/RESET = SubResource( 2 )
anims/attack_anim = ExtResource( 6 )
anims/attack_anim_one = ExtResource( 7 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="button_down" from="Button" to="." method="_on_Button_button_down"]
